# core

./: README.md  pyproject.toml
.github/workflows/: run-tests.yml  tests.yml
docketanalyzer_core/: __init__.py  utils.py
docketanalyzer_core/cli/: build.py
docketanalyzer_core/cli/dev/: build.py
docketanalyzer_core/config/: env.py
docketanalyzer_core/services/: __init__.py  psql.py  redis.py  s3.py
tests/: test_services.py
