[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docketanalyzer-core"
version = "0.1.0"
authors = [
    { name = "Nathan Dahlberg" },
]
description = "Docket Analyzer Core Utilities"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "click>=8.0.0",
    "elasticsearch>=8.17.2",
    "pathlib>=1.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "simplejson>=3.19.3",
    "tqdm>=4.66.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.9.10",
]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=docketanalyzer_core"
testpaths = ["tests"]
pythonpath = "."
